--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/vue": "^2.0.13",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.8"
+    "@tailwindcss/typography": "^0.5.8",
+    "animate.css": "^4.1.1"
   }
 }
