--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.0.0",
+    "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.33.0",
