--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "@vue-hero-icons/outline": "^1.7.2",
     "@vue-hero-icons/solid": "^1.7.2",
-    "animate.css": "^4.1.1"
+    "animate.css": "^4.1.1",
+    "gsap": "^3.11.4"
   }
 }
